Backend permissions and auditing